package com.bacarsa.inventario.models;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class ComponenteHW {

    private String id;
    private String nombre;
    private String marca;
    private String descripcion;
}
