package com.bacarsa.inventario.models;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class Estado {

    private String nombre;
    private String descripcion;
    private String ambito;
}
