package com.bacarsa.inventario.models;

public enum TipoPeriferico {
    ENTRADA,
    SALIDA
}
