package com.bacarsa.inventario.models;

public enum UbicacionCamara {
    GUARDIA,
    MONITOREO,
    ADMINISTRACION,
    TESORERIA,
    CAPITAL_HUMANO,
    SISTEMAS,
    SEGURIDADPRIVADA,
    ESTACIONAMIENTO,
    CALLE1,
    CALLE2
}
