package com.bacarsa.inventario.models;

public enum UbicacionRed {
    RACK_PRINCIPAL,
    RACK_SECUNDARIO,
    ADMINISTRACION,
    MONITOREO,
    SISTEMAS,
    GUARDIA
}
