@startuml Diagrama de Clases - Inventario

skinparam classAttributeIconSize 0
skinparam linetype ortho

' ==================== ENUMS ====================

enum Ubicacion {
    ADMINISTRACION
    MONITOREO
    TESORERIA
    CAPITAL_HUMANO
    SISTEMAS
    SEGURIDADPRIVAD
}

enum UbicacionCamara {
    GUARDIA
    MONITOREO
    ADMINISTRACION
    TESORERIA
    CAPITAL_HUMANO
    SISTEMAS
    SEGURIDADPRIVADA
    ESTACIONAMIENTO
    CALLE1
    CALLE2
}

enum UbicacionRed {
    RACK_PRINCIPAL
    RACK_SECUNDARIO
    ADMINISTRACION
    MONITOREO
    SISTEMAS
    GUARDIA
}

enum TipoPeriferico {
    ENTRADA
    SALIDA
}

enum FabricanteProcesador {
    INTEL
    AMD
    DESCONOCIDO
    --
    +{static} fromString(nombreRaw: String): FabricanteProcesador
}

enum EstadoOperativo {
    ASIGNADA
    SIN_ASIGNAR
    EN_MANTENIMIENTO
    BAJA
    --
    +{static} inferirAsignacionDesdeTexto(texto: String): EstadoOperativo
}

' ==================== CLASES DE DOMINIO ====================

class Estado {
    -nombre: String
    -descripcion: String
    -ambito: String
}

class CambioEstado {
    -fechaHoraInicio: Timestamp
    -fechaHoraFin: Timestamp
    -motivo: String
    -estado: Estado
    --
    +esEstadoActual(): boolean
    +getDuracion(): Duration
}

class ComponenteHW {
    -id: String
    -nombre: String
    -marca: String
    -descripcion: String
}

class Disco {
    -tipoDisco: String
    -modeloDisco: String
    -totalGB: double
    -libreGB: double
    -usadoGB: double
    -puntoMontaje: String
    -dispositivo: String
    -porcentajeUsado: double
    -discoFisicoIndex: String
}

class Ram {
    -capacidadGB: int
    -velocidadMHz: int
    -modelo: String
    -fabricante: String
}

class Periferico {
    -tipo: String
    --
    +isAsignado(): boolean
}

class Computadora {
    -uuid: String
    -hostname: String
    -usuarioActual: String
    -sistemaOperativo: String
    -arquitectura: String
    -procesadorRaw: String
    -nucleosFisicos: int
    -estadoConexion: String
    -ultimaSincronizacion: Timestamp
    --
    +getEstadoActual(): Estado
}

class Camara {
    -id: String
    -nombre: String
    -marca: String
    -descripcion: String
    -responsable: String
    -fechaAlta: LocalDate
    --
    +getEstadoActual(): Estado
}

class Router {
    -id: String
    -nombre: String
    -marca: String
    -modelo: String
    -ip: String
    -numeroSerie: String
    -firmware: String
    -cantidadPuertosWan: int
    -cantidadPuertosLan: int
    -gateway: String
    -fechaAlta: LocalDate
    --
    +getEstadoActual(): Estado
}

class SwitchRed {
    -id: String
    -nombre: String
    -marca: String
    -modelo: String
    -ip: String
    -numeroSerie: String
    -cantidadPuertos: int
    -tipo: String
    -vlans: List<String>
    -fechaAlta: LocalDate
    --
    +getEstadoActual(): Estado
}

' ==================== CLASES FIRESTORE (Agente C#) ====================

package "Firestore — datos del agente C#" {

    class PerifericosFirestore {
        -impresoras: List<ImpresoraFirestore>
        -dispositivosUsb: List<DispositivoUsbFirestore>
        -monitores: List<MonitorFirestore>
        -audio: AudioFirestore
    }

    class ImpresoraFirestore {
        -nombre: String
        -driver: String
        -puerto: String
        -tipo: String
        -tipoImpresora: String
        -estado: String
        -compartida: Boolean
        -predeterminada: Boolean
    }

    class MonitorFirestore {
        -nombre: String
        -resolucion: String
        -pulgadas: Double
        -anchoCm: Double
        -altoCm: Double
    }

    class DispositivoUsbFirestore {
        -nombre: String
        -fabricante: String
        -categoria: String
        -clase: String
        -conexion: String
    }

    class AudioFirestore {
        -entrada: List<DispositivoAudioFirestore>
        -salida: List<DispositivoAudioFirestore>
    }

    class DispositivoAudioFirestore {
        -nombre: String
        -fabricante: String
        -estado: String
    }
}

' ==================== RELACIONES ====================

' Herencia
ComponenteHW <|-- Periferico

' Computadora
Computadora *-- "0..*" Disco : discos
Computadora *-- "0..*" Ram : modulos
Computadora --> "1" Ubicacion : ubicacion
Computadora --> "1" Estado : estadoActual
Computadora --> "0..*" CambioEstado : historialEstados
Computadora *-- "1" PerifericosFirestore : perifericos

' Camara
Camara --> "1" UbicacionCamara : ubicacion
Camara --> "1" Estado : estadoActual
Camara --> "0..*" CambioEstado : historialEstados

' Periferico
Periferico --> "0..1" Computadora : computadora
Periferico --> "1" Estado : estadoActual
Periferico --> "0..*" CambioEstado : historialEstados

' Router
Router --> "1" UbicacionRed : ubicacion
Router --> "1" Estado : estadoActual
Router --> "0..*" CambioEstado : historialEstados

' SwitchRed
SwitchRed --> "1" UbicacionRed : ubicacion
SwitchRed --> "1" Estado : estadoActual
SwitchRed --> "0..*" CambioEstado : historialEstados

' CambioEstado
CambioEstado --> "1" Estado : estado

' PerifericosFirestore
PerifericosFirestore *-- "0..*" ImpresoraFirestore
PerifericosFirestore *-- "0..*" DispositivoUsbFirestore
PerifericosFirestore *-- "0..*" MonitorFirestore
PerifericosFirestore *-- "1" AudioFirestore
AudioFirestore *-- "0..*" DispositivoAudioFirestore

@enduml
